--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -1,5 +1,5 @@
 .hero__desc {
-  box-shadow: 1px 1px 10px 1px gray;
+  // box-shadow: 1px 1px 10px 1px gray;
   border-radius: 15px;
   padding-left: 20px;
   width: 400px;
