--- a/src/components/product/Product.scss
+++ b/src/components/product/Product.scss
@@ -16,10 +16,13 @@
       background-color: transparent;
       transition: all ease 0.4s;
     }
+    .ff {
+      color: transparent;
+    }
     .div__num {
       transition: all ease 0.4s;
       position: absolute;
-      bottom: 15px;
+      bottom: 10px;
       left: 20px;
     }
   }
@@ -31,6 +34,34 @@
   .div__num {
     position: absolute;
     bottom: 0;
-    left: -50px;
+    left: -65px;
+  }
+}
+.spinner {
+  width: 3em;
+  height: 3em;
+  cursor: not-allowed;
+  border-radius: 50%;
+  border: 2px solid #444;
+  box-shadow: -10px -10px 10px #6359f8, 0px -10px 10px 0px #9c32e2,
+    10px -10px 10px #f36896, 10px 0 10px #ff0b0b, 10px 10px 10px 0px#ff5500,
+    0 10px 10px 0px #ff9500, -10px 10px 10px 0px #ffb700;
+  animation: rot55 0.7s linear infinite;
+}
+
+.spinnerin {
+  border: 2px solid #444;
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes rot55 {
+  to {
+    transform: rotate(360deg);
   }
 }
