--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -37,9 +37,9 @@ img {
   font-weight: 500;
 }
 
-body {
-  min-height: 500vh;
-}
+// body {
+//   min-height: 500vh;
+// }
 li {
   list-style: none;
 }
